# TimENC

./: .gitattributes  .gitignore  Cargo.toml  README.md  TimENC.desktop  TimENC.py  TimENC.spec  timenc.py
.github/workflows/: flatpak.yml  release-build.yml
Images/: TimENC-Icoon.icns  TimENC-Zorin-Flatpak.webm
flatpak/: FLATHUB.md  cargo-sources.json  io.github.SnowTimSwiss.TimENC.desktop  io.github.SnowTimSwiss.TimENC.metainfo.xml  io.github.SnowTimSwiss.TimENC.yml  timenc-wrapper.sh
legacy/: README.md  requirements.txt  timenc.py
legacy/.github/workflows/: release-build.yml
notice/: notice.txt
src/: error.rs  lib.rs  main.rs  operations.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/crypto/: mod.rs
src/format/: mod.rs
tests/: crypto_tests.rs  format_tests.rs  integration_tests.rs
