[package]
name = "timenc"
version = "2.2.1"
edition = "2021"
authors = ["TimENC Contributors"]
description = "Secure file encryption with ChaCha20-Poly1305 and Argon2id"
license = "GPL-3.0"
repository = "https://github.com/SnowTimSwiss/TimENC"
keywords = ["encryption", "chacha20", "argon2", "security", "cli"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name = "timenc"
path = "src/lib.rs"

[[bin]]
name = "timenc"
path = "src/main.rs"

[dependencies]
# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"

# Compression
zstd = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
thiserror = "1.0"
tar = "0.4"
tempfile = "3.9"
dirs = "5.0"

# Async support for potential future features
tokio = { version = "1.35", features = ["full"], optional = true }

[features]
default = []
gui = ["dep:tokio"]

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[package.metadata.deb]
maintainer = "TimENC Contributors"
copyright = "2024, TimENC Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
TimENC is a modern, cross-platform encryption tool.
It uses ChaCha20-Poly1305 AEAD encryption and Argon2id \
key derivation for strong, authenticated encryption."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/timenc", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/timenc/", "644"],
]
