[package]
name = "timenc-tauri"
version = "2.0.0"
description = "TimENC - Secure Encryption GUI"
authors = ["TimENC Contributors"]
license = "GPL-3.0"
repository = "https://github.com/SnowTimSwiss/TimENC"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timenc = { path = ".." }
tokio = { version = "1.35", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
