[package]
name = "timenc-tauri"
version = "2.2.2"
description = "TimENC - Secure Encryption GUI"
authors = ["TimENC Contributors"]
license = "GPL-3.0"
repository = "https://github.com/SnowTimSwiss/TimENC"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timenc = { path = ".." }
tokio = { version = "1.35", features = ["full"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
